--- a/catalog.html
+++ b/catalog.html
@@ -75,47 +75,64 @@
     </ul>
 
 <div class="cards">
-    <ul class="cards-item">
-        <li>
+    <ul class="list1">
+        <li class="item1">
+          <section class="card-content">
             <img src="img/sedona.jpg" width="359" height="578" alt="Седона">
             <h3><a class="project-name" href="">SEDONA</a></h3>
             <p class="project-info">Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
+          </section>
         </li>
-        <li>
+
+        <li class="item1">
+          <section class="card-content">
             <img src="img/pink.jpg" width="359" height="578" alt="Пинк">
             <h3><a class="project-name" href="">SEDONA</a></h3>
             <p class="project-info">Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
+        </section>
         </li>
-        <li>
+
+        <li class="item2">
+          <section class="card-content">
             <img src="img/borodinsky.jpg" width="359" height="578" alt="Бородинский">
             <h3><a class="project-name" href="">SEDONA</a></h3>
             <p class="project-info">Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
+          </section>
         </li>
-        <li>
+
+        <li class="item2">
+          <section class="card-content">
             <img src="img/mishka.jpg" width="359" height="578" alt="Мишка">
             <h3><a class="project-name" href="">SEDONA</a></h3>
             <p class="project-info">Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
+          </section>
         </li>
-        <li>
+
+        <li class="item3">
+          <section class="card-content">
             <img src="img/aplus.jpg" width="359" height="578" alt="А плюс">
             <h3><a class="project-name" href="">SEDONA</a></h3>
             <p class="project-info">Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
+            </section>
         </li>
-        <li>
+
+        <li class="item3">
+          <section class="card-content">
             <img src="img/kvast.jpg" width="359" height="578" alt="Кваст">
             <h3><a class="project-name" href="">SEDONA</a></h3>
             <p class="project-info">Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
+          </section>
         </li>
     </ul>
   </div>
 </section>
-  </div>
+</div>
 
   <div class="num">
     <ul class="pages">
